# Alyx-Base-C-Headers

./: CMakeLists.txt  README.md  alyx_base_c_sdk_import.cmake  post_init.cmake
src/: CMakeLists.txt
src/alyx_adc/: CMakeLists.txt  README.md
src/alyx_adc/include/alyx/: adc.h
src/alyx_gpio/: CMakeLists.txt  README.md
src/alyx_gpio/include/alyx/: gpio.h
src/alyx_i2c/: CMakeLists.txt  README.md
src/alyx_i2c/include/alyx/: i2c.h
src/alyx_os/: CMakeLists.txt
src/alyx_pwm/: CMakeLists.txt  README.md
src/alyx_pwm/include/alyx/: pwm.h
src/alyx_spi/: CMakeLists.txt  README.md
src/alyx_spi/include/alyx/: spi.h
src/alyx_stdlib/: CMakeLists.txt  README.md
src/alyx_stdlib/include/alyx/: stdlib.h
src/alyx_temp/: CMakeLists.txt  README.md
src/alyx_temp/include/alyx/: temp.h
src/alyx_time/: CMakeLists.txt  README.md
src/alyx_time/include/alyx/: time.h
src/alyx_uart/: CMakeLists.txt  README.md
src/alyx_uart/include/alyx/: uart.h
src/piccolo_os/: CMakeLists.txt  LICENSE  README.md  os.h
src/piccolo_os/include/piccolo/: os.c  os.h  os_lock_core_v1.1.c  os_lock_core_v1.1.h
